hydroflow/tests/compile-fail/surface_group_by_badtype_option.stderr
error[E0271]: expected `std::collections::vec_deque::IntoIter<std::option::Option<{integer}>>` to be an iterator that yields `(_, _)`, but it yields `std::option::Option<{integer}>`
 --> tests/compile-fail/surface_group_by_badtype_option.rs:5:9
  |
5 |         source_iter([ Some(5), None, Some(12) ])
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected tuple, found enum `std::option::Option`
6 |             -> group_by(|| 0, |old: &mut u32, val: u32| *old += val)
  |                ----------------------------------------------------- required by a bound introduced by this call
  |
  = note: expected tuple `(_, _)`
              found enum `std::option::Option<{integer}>`
note: required by a bound in `check_input`
 --> tests/compile-fail/surface_group_by_badtype_option.rs:6:16
  |
6 |             -> group_by(|| 0, |old: &mut u32, val: u32| *old += val)
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `check_input`
